{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 1168,
  "lineage": "7f67f57a-34e7-72ce-236a-f8697f70b57f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rtb_vpc_il_vpc_main_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-065506025c23b999c",
            "id": "rtb-065506025c23b999c",
            "owner_id": "482976502347",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00605781bb57e2b51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Created by": "QuyenNV",
              "Evn": "Dev",
              "Name": "TL_LAB_TEST",
              "Project": "ILTestLAB"
            },
            "vpc_id": "vpc-0aeff1e03129f37a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_il_vpc_main_main",
            "aws_vpc.il_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_il_vpc_main_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482976502347:internet-gateway/igw-00605781bb57e2b51",
            "id": "igw-00605781bb57e2b51",
            "owner_id": "482976502347",
            "tags": {
              "Created by": "QuyenNV",
              "Evn": "Dev",
              "Name": "TL_LAB_TEST",
              "Project": "ILTestLAB"
            },
            "vpc_id": "vpc-0aeff1e03129f37a1"
          },
          "dependencies": [
            "aws_vpc.il_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_main_association_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082a6907e8d95e46f",
            "route_table_id": "rtb-065506025c23b999c",
            "subnet_id": "subnet-067038ad3118b5e36"
          },
          "dependencies": [
            "aws_default_route_table.rtb_vpc_il_vpc_main_main",
            "aws_internet_gateway.igw_il_vpc_main_main",
            "aws_subnet.sn_app_ec_instance",
            "aws_vpc.il_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_app_db_zonea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482976502347:subnet/subnet-0044592cb305c9b17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.160/27",
            "id": "subnet-0044592cb305c9b17",
            "map_public_ip_on_launch": false,
            "owner_id": "482976502347",
            "tags": {
              "Created by": "QuyenNV",
              "Evn": "Dev",
              "Name": "TL_LAB_TEST",
              "Project": "ILTestLAB"
            },
            "vpc_id": "vpc-0aeff1e03129f37a1"
          },
          "dependencies": [
            "aws_vpc.il_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_app_db_zonec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482976502347:subnet/subnet-0af3fb14c4bf5e759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.10.208/28",
            "id": "subnet-0af3fb14c4bf5e759",
            "map_public_ip_on_launch": false,
            "owner_id": "482976502347",
            "tags": {
              "Created by": "QuyenNV",
              "Evn": "Dev",
              "Name": "TL_LAB_TEST",
              "Project": "ILTestLAB"
            },
            "vpc_id": "vpc-0aeff1e03129f37a1"
          },
          "dependencies": [
            "aws_vpc.il_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_app_ec_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482976502347:subnet/subnet-067038ad3118b5e36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.64/26",
            "id": "subnet-067038ad3118b5e36",
            "map_public_ip_on_launch": true,
            "owner_id": "482976502347",
            "tags": {
              "Created by": "QuyenNV",
              "Evn": "Dev",
              "Name": "TL_LAB_TEST",
              "Project": "ILTestLAB"
            },
            "vpc_id": "vpc-0aeff1e03129f37a1"
          },
          "dependencies": [
            "aws_vpc.il_vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "il_vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482976502347:vpc/vpc-0aeff1e03129f37a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.10.0/24",
            "default_network_acl_id": "acl-093fe430c3b1fc4dc",
            "default_route_table_id": "rtb-065506025c23b999c",
            "default_security_group_id": "sg-0444b2c3c3f3d7d91",
            "dhcp_options_id": "dopt-80e509e6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aeff1e03129f37a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-065506025c23b999c",
            "owner_id": "482976502347",
            "tags": {
              "Created by": "QuyenNV",
              "Evn": "Dev",
              "Name": "TL_LAB_TEST",
              "Project": "ILTestLAB"
            }
          }
        }
      ]
    },
    {
      "module": "module.postgresql_db[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds_postgres_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482976502347:security-group/sg-0075bf76b907ffed8",
            "description": "Allow app can access into the rds instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0075bf76b907ffed8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24"
                ],
                "description": "Allow all subnet in the vpc can accessable",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "SG RDS INSTANCE",
            "name_prefix": null,
            "owner_id": "482976502347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created by": "QuyenNV",
              "Evn": "Dev",
              "Name": "TL_LAB_TEST",
              "Project": "ILTestLAB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aeff1e03129f37a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.il_vpc_main"
          ]
        }
      ]
    }
  ]
}